# vail

./: .gitignore  Cargo.toml  README.md  build.rs  build_des.rs  build_process_scheme.rs  build_ser.rs  build_types.rs  build_utils.rs  scheme.tl
prog/: Cargo.toml
prog/src/: main.rs  math.rs  rsa.rs
prog_async/: Cargo.toml
prog_async/src/: main.rs  math.rs  tcp_full.rs
src/: deserialize.rs  lib.rs  serialize.rs  types.rs
tl_codegen/: Cargo.toml
tl_derive/: Cargo.toml
tl_derive/src/: lib.rs
tl_parser/: Cargo.toml  scheme.tl
tl_parser/src/: build_des.rs  build_process_scheme.rs  build_ser.rs  build_types.rs  build_utils.rs  main.rs
tl_parser/src/potato/: constructors.rs  constructors_deserialize.rs  constructors_serialize.rs
vail/: Cargo.toml  build.rs  scheme.tl
vail/src/: authkey.rs  constructors.rs  deserialize.rs  functions.rs  lib.rs  math.rs  serialize.rs  tl.rs
vail_mtproto/: Cargo.toml
vail_types/: Cargo.toml  build.rs  build_des.rs  build_process_scheme.rs  build_ser.rs  build_types.rs  build_utils.rs  scheme.tl
vail_types/src/: constructors.rs  constructors_deserialize.rs  constructors_serialize.rs  deserialize.rs  functions.rs  functions_serialize.rs  lib.rs  methods.rs  serialize.rs  types.rs
