[package]
authors = ["Juan Potato <hasantiny@gmail.com>", "Brayden Banks <bb010g@gmail.com>"]
build = "build.rs"
name = "vail"
version = "0.1.0"

[build-dependencies]
lazy_static = "0.2"
regex = "0.2"

[dependencies]
byteorder = "1.0.0"
openssl = "0.9.8"
time = "0.1"

[dependencies.tl_derive]
path = "../tl_derive"
