[package]
authors = ["Juan Potato <hasantiny@gmail.com>", "Brayden Banks <bb010g@gmail.com>"]
build = "build.rs"
name = "vail"
license = "MPL-2.0"
version = "0.1.0"

[build-dependencies]
lazy_static = "0.2"
regex = "0.2"

[dependencies]
byteorder = "1.0.0"
openssl = "0.9.13"
time = "0.1"
rand = "0.3"
crc = "1.4"
sha1 = "0.2.0"

[dependencies.tl_derive]
path = "../tl_derive"
