[package]
name = "vail_types"
version = "0.1.0"
authors = ["Hasan Ibraheem <hasantiny@gmail.com>"]
build = "build.rs"
license = "MPL-2.0"
description = "MTProto scheme types for Vail"
repository = "https://github.com/JuanPotato/vail"

[dependencies]

[dependencies.byteorder]
version = "1"
features = ["i128"]

[build-dependencies]
regex = "0.2"
lazy_static = "1.0"
